# bigos

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  lefthook.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
kernel/: Cargo.toml  build.rs
kernel-macros/: Cargo.toml
kernel-macros/src/: lib.rs
kernel/.cargo/: config.toml
kernel/src/: boot.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  testing.rs
kernel/src/data_structures/: vector.rs
kernel/src/events/: event_buffer.rs  mod.rs
kernel/src/filesystem/: mod.rs  sirius.rs
kernel/src/filesystem/fat32/: boot_sector.rs  direntry.rs  mod.rs  test_data.rs
kernel/src/graphics/: color.rs  compositor.rs  demo.rs  framebuffer.rs  mod.rs  pipeline.rs  renderer.rs  resources.rs  shaders.rs  texture.rs  window.rs
kernel/src/io/: disk.rs  mod.rs  serial.rs
kernel/src/memory/: allocator.rs  mod.rs  paging.rs  usermem.rs
kernel/src/process/: elf_loader.rs  execution.rs  mod.rs  process_manager.rs  process_mem.rs  scheduler.rs  syscall.rs  task.rs
kernel/src/programs/: mod.rs  theophe.rs
kernel/src/tests/: test_basic_boot.rs  test_elf_loader.rs  test_filesystem.rs  test_heap.rs  test_page_mapping.rs  test_should_panic.rs  test_stack_overflow.rs
kernel/src/util/: cpuinfo.rs  mod.rs  msr.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  testing.rs  vga.rs
src/io/: serial.rs  vga.rs
tests/: basic_boot.rs  frame_page_mapping.rs  heap_allocation.rs  paging.rs  should_panic.rs  stack_overflow.rs
user/: crt0.c  linker.ld
user/libc/: syscall.h  types.h
user/programs/first/: first.c
xtask/src/: main.rs
