[package]
name = "bigos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.10.0"
uart_16550 = "0.4.0"
volatile = "0.2.7"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[profile.dev]

[profile.release]
panic = "abort"

[[bin]]
name = "bigos"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
run-args = ["-serial", "stdio"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 60
