[workspace]
members = ["kernel", "kernel-macros"]
exclude = ["xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["karolzwolak", "franccium", "norbertcygiert"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
