[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
limine = "0.5.0"
uart_16550 = "0.5.0"
x86_64 = "0.15.2"
pc-keyboard = "0.8.0"
spin = "0.10.0"
embedded-graphics = "0.8.2"
acpi = "6.1.1"
linked_list_allocator = "0.9.0"
bitflags = "2.11.0"
elf = {version = "0.8.0", default-features = false }
linkme = "0.3"
kernel-macros = { path = "../kernel-macros" }

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

